--- a/account/i18n/mn.po
+++ b/account/i18n/mn.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2014-02-01 16:52+0000\n"
+"PO-Revision-Date: 2014-02-08 13:02+0000\n"
 "Last-Translator: gobi <Unknown>\n"
 "Language-Team: Mongolian <mn@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-02 05:59+0000\n"
+"X-Launchpad-Export-Date: 2014-02-09 06:50+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: account
@@ -9502,8 +9502,8 @@ msgid ""
 "The residual amount on a receivable or payable of a journal entry expressed "
 "in the company currency."
 msgstr ""
-"Журналын бичилтүүдийн Авлага болон Өглөгийн зөрүүний дн нь компаний валютаар "
-"илэрхийлэгдсэн байдал."
+"Журналын бичилтүүдийн Авлага болон Өглөгийн зөрүүний дүн нь компаний "
+"валютаар илэрхийлэгдсэн байдал."
 
 #. module: account
 #: view:account.tax.code:0
