--- a/procurement/i18n/ja.po
+++ b/procurement/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2014-02-07 12:58+0000\n"
-"Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
+"PO-Revision-Date: 2014-02-08 16:41+0000\n"
+"Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-08 07:16+0000\n"
+"X-Launchpad-Export-Date: 2014-02-09 06:51+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: procurement
@@ -859,7 +859,7 @@ msgid ""
 "                        trigger a draft purchase order, a manufacturing "
 "order or\n"
 "                        a new task."
-msgstr ""
+msgstr "この製品の調達要求を生成するためのアシスタントです。製品の構成によってドラフト発注、製造オーダーまたは新しいタスクを起動します。"
 
 #. module: procurement
 #: field:procurement.order,close_move:0
