--- a/purchase/i18n/ja.po
+++ b/purchase/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-02-07 11:22+0000\n"
-"Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
+"PO-Revision-Date: 2014-02-08 12:01+0000\n"
+"Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-08 07:16+0000\n"
+"X-Launchpad-Export-Date: 2014-02-09 06:51+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: purchase
@@ -962,7 +962,7 @@ msgstr "年順"
 #. module: purchase
 #: model:ir.actions.act_window,name:purchase.act_res_partner_2_purchase_order
 msgid "RFQs and Purchases"
-msgstr ""
+msgstr "見積依頼と購入"
 
 #. module: purchase
 #: field:account.config.settings,group_analytic_account_for_purchases:0
