--- a/stock/i18n/ja.po
+++ b/stock/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-02-06 15:56+0000\n"
-"PO-Revision-Date: 2014-02-04 09:10+0000\n"
+"PO-Revision-Date: 2014-02-08 10:41+0000\n"
 "Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-07 07:11+0000\n"
+"X-Launchpad-Export-Date: 2014-02-09 06:52+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: stock
@@ -1406,9 +1406,9 @@ msgid ""
 msgstr ""
 "* 新規：在庫移動が作成されて、まだ確認されていない場合です。\n"
 "* 別の移動待ち：この状態は連鎖フローのような別の移動を待つ場合を表します。\n"
-"* 利用可能待ち：部品の製造やスケジューラの実行が必要で調達の解決策が単純でない場合、この状態になります。\n"
+"* 利用可能待ち：調達の解決が単純でない状態です。その場合は構成部品の製造やスケジューラの実行が必要になります。\n"
 "* 利用可能：製品が確保されると「利用可能」に設定されます。\n"
-"* 完了：出荷が処理されると状態は「完了」になります。"
+"* 完了：出荷が処理されると「完了」状態になります。"
 
 #. module: stock
 #: model:stock.location,name:stock.stock_location_locations_partner
