--- a/procurement/i18n/am.po
+++ b/procurement/i18n/am.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2014-02-11 13:38+0000\n"
+"PO-Revision-Date: 2014-02-17 07:27+0000\n"
 "Last-Translator: biniyam <life2enough@gmail.com>\n"
 "Language-Team: Amharic <am@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-12 06:23+0000\n"
+"X-Launchpad-Export-Date: 2014-02-18 05:41+0000\n"
 "X-Generator: Launchpad (build 16916)\n"
 
 #. module: procurement
@@ -587,7 +587,7 @@ msgstr "ሁኔታው"
 #. module: procurement
 #: selection:product.template,supply_method:0
 msgid "Buy"
-msgstr ""
+msgstr "ይግዙ"
 
 #. module: procurement
 #: view:product.product:0
@@ -597,7 +597,7 @@ msgstr ""
 #. module: procurement
 #: selection:procurement.order,priority:0
 msgid "Normal"
-msgstr ""
+msgstr "መደበኛ"
 
 #. module: procurement
 #: help:product.template,supply_method:0
@@ -610,12 +610,12 @@ msgstr ""
 #. module: procurement
 #: field:stock.warehouse.orderpoint,product_max_qty:0
 msgid "Maximum Quantity"
-msgstr ""
+msgstr "ከፍተኛው ብዛት"
 
 #. module: procurement
 #: field:procurement.order,message_is_follower:0
 msgid "Is a Follower"
-msgstr ""
+msgstr "ተከታይ ነው"
 
 #. module: procurement
 #: code:addons/procurement/procurement.py:367
