--- a/procurement/i18n/am.po
+++ b/procurement/i18n/am.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2014-02-18 13:39+0000\n"
+"PO-Revision-Date: 2014-02-21 11:34+0000\n"
 "Last-Translator: biniyam <life2enough@gmail.com>\n"
 "Language-Team: Amharic <am@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-19 05:40+0000\n"
-"X-Generator: Launchpad (build 16916)\n"
+"X-Launchpad-Export-Date: 2014-02-22 07:33+0000\n"
+"X-Generator: Launchpad (build 16926)\n"
 
 #. module: procurement
 #: model:ir.ui.menu,name:procurement.menu_stock_sched
@@ -490,7 +490,7 @@ msgstr "ያልተነበቡ መልእክቶች"
 #. module: procurement
 #: selection:mrp.property,composition:0
 msgid "plus"
-msgstr ""
+msgstr "መጨመር"
 
 #. module: procurement
 #: help:procurement.order,state:0
@@ -539,7 +539,7 @@ msgstr ""
 #. module: procurement
 #: view:procurement.order:0
 msgid "Procurement Lines"
-msgstr ""
+msgstr "የግዢው አይነት የሚፃፍበት መስመር"
 
 #. module: procurement
 #: view:product.product:0
@@ -592,7 +592,7 @@ msgstr "ይግዙ"
 #. module: procurement
 #: view:product.product:0
 msgid "for the delivery order."
-msgstr ""
+msgstr "የሚደርሱ እቃዎች"
 
 #. module: procurement
 #: selection:procurement.order,priority:0
@@ -785,7 +785,7 @@ msgstr "ማዘዣ"
 #. module: procurement
 #: field:procurement.order,origin:0
 msgid "Source Document"
-msgstr ""
+msgstr "የሰነዱ ምንጭ"
 
 #. module: procurement
 #: selection:procurement.order,priority:0
@@ -812,12 +812,12 @@ msgstr ""
 #. module: procurement
 #: model:ir.model,name:procurement.model_procurement_order_compute_all
 msgid "Compute all schedulers"
-msgstr ""
+msgstr "ቀሪውን ቀን ማግኘ"
 
 #. module: procurement
 #: view:procurement.order:0
 msgid "Late"
-msgstr ""
+msgstr "የዘገየ"
 
 #. module: procurement
 #: view:board.board:0
@@ -828,12 +828,12 @@ msgstr ""
 #: model:ir.actions.act_window,name:procurement.product_open_orderpoint
 #: view:product.product:0
 msgid "Orderpoints"
-msgstr ""
+msgstr "የማዘዣ ግዜ"
 
 #. module: procurement
 #: field:product.product,orderpoint_ids:0
 msgid "Minimum Stock Rules"
-msgstr ""
+msgstr "አነስተኛው የግምጃ ቤት ቀሪ"
 
 #. module: procurement
 #: view:make.procurement:0
@@ -854,7 +854,7 @@ msgstr ""
 #. module: procurement
 #: view:procurement.order:0
 msgid "Scheduled Date"
-msgstr ""
+msgstr "የግዢ ቀን"
 
 #. module: procurement
 #: model:ir.model,name:procurement.model_product_product
@@ -863,46 +863,46 @@ msgstr ""
 #: field:procurement.order,product_id:0
 #: field:stock.warehouse.orderpoint,product_id:0
 msgid "Product"
-msgstr ""
+msgstr "እቃ"
 
 #. module: procurement
 #: view:procurement.order:0
 msgid "Temporary"
-msgstr ""
+msgstr "ጊዚያዊ"
 
 #. module: procurement
 #: field:mrp.property,description:0
 #: field:mrp.property.group,description:0
 #: field:procurement.order,name:0
 msgid "Description"
-msgstr ""
+msgstr "ማብራርያ"
 
 #. module: procurement
 #: selection:procurement.order,priority:0
 msgid "Urgent"
-msgstr ""
+msgstr "አስቸኳይ"
 
 #. module: procurement
 #: selection:procurement.order,state:0
 msgid "Running"
-msgstr ""
+msgstr "በሥራ ላይ"
 
 #. module: procurement
 #: model:process.node,name:procurement.process_node_serviceonorder0
 #: selection:procurement.order,procure_method:0
 #: selection:product.template,procure_method:0
 msgid "Make to Order"
-msgstr ""
+msgstr "ግዢ የሚፈጸመው በትዛዝ ነው"
 
 #. module: procurement
 #: field:product.template,supply_method:0
 msgid "Supply Method"
-msgstr ""
+msgstr "የእቃ አቅርቦቱ ዘዴ"
 
 #. module: procurement
 #: field:procurement.order,move_id:0
 msgid "Reservation"
-msgstr ""
+msgstr "ተቀማጭ እቃ"
 
 #. module: procurement
 #: model:process.node,note:procurement.process_node_procureproducts0
@@ -923,12 +923,12 @@ msgstr ""
 #: field:mrp.property,name:0
 #: field:stock.warehouse.orderpoint,name:0
 msgid "Name"
-msgstr ""
+msgstr "ስም"
 
 #. module: procurement
 #: selection:mrp.property,composition:0
 msgid "max"
-msgstr ""
+msgstr "ትልቅ የጣርያ ገደብ"
 
 #. module: procurement
 #: model:ir.actions.act_window,name:procurement.act_procurement_2_stock_warehouse_orderpoint
@@ -937,7 +937,7 @@ msgstr ""
 #: model:ir.ui.menu,name:procurement.menu_stock_order_points
 #: view:stock.warehouse.orderpoint:0
 msgid "Reordering Rules"
-msgstr ""
+msgstr "እቃ የመግዣ ህጎች"
 
 #. module: procurement
 #: code:addons/procurement/procurement.py:139
@@ -953,7 +953,7 @@ msgstr ""
 #. module: procurement
 #: model:ir.model,name:procurement.model_product_template
 msgid "Product Template"
-msgstr ""
+msgstr "የእቃው ማሳያ"
 
 #. module: procurement
 #: view:procurement.orderpoint.compute:0
@@ -964,7 +964,7 @@ msgstr ""
 #. module: procurement
 #: view:procurement.order:0
 msgid "Search Procurement"
-msgstr ""
+msgstr "ግዢዎችን መፈለግ"
 
 #. module: procurement
 #: help:procurement.order,message:0
@@ -974,7 +974,7 @@ msgstr ""
 #. module: procurement
 #: selection:procurement.order,priority:0
 msgid "Very Urgent"
-msgstr ""
+msgstr "በጣም አስቸኮይ"
 
 #. module: procurement
 #: field:procurement.orderpoint.compute,automatic:0
@@ -984,17 +984,17 @@ msgstr ""
 #. module: procurement
 #: help:procurement.order,message_ids:0
 msgid "Messages and communication history"
-msgstr ""
+msgstr "የመልእክትና ግንኙነት ታሪኮች"
 
 #. module: procurement
 #: view:procurement.order:0
 msgid "Procurement started late"
-msgstr ""
+msgstr "ግዢ ተጅምሮ የዘገየበት ቀን"
 
 #. module: procurement
 #: selection:mrp.property,composition:0
 msgid "min"
-msgstr ""
+msgstr "ትንሹ"
 
 #. module: procurement
 #: view:make.procurement:0
@@ -1002,18 +1002,18 @@ msgstr ""
 #: view:procurement.order.compute.all:0
 #: view:procurement.orderpoint.compute:0
 msgid "or"
-msgstr ""
+msgstr "ወይም"
 
 #. module: procurement
 #: code:addons/procurement/schedulers.py:134
 #, python-format
 msgid "SCHEDULER"
-msgstr ""
+msgstr "ግዜ መያዣ"
 
 #. module: procurement
 #: view:product.product:0
 msgid "Request Procurement"
-msgstr ""
+msgstr "ግዢ መጠየቂያ"
 
 #. module: procurement
 #: code:addons/procurement/schedulers.py:87
@@ -1025,4 +1025,4 @@ msgstr ""
 #: code:addons/procurement/procurement.py:339
 #, python-format
 msgid "Products reserved from stock."
-msgstr ""
+msgstr "በግምጃ ቤት ውስጥ የተቀመጡ ቀሪ እቃዎች"
