--- a/stock/i18n/ja.po
+++ b/stock/i18n/ja.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-02-06 15:56+0000\n"
-"PO-Revision-Date: 2014-02-18 18:05+0000\n"
+"PO-Revision-Date: 2014-02-21 16:07+0000\n"
 "Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-19 05:40+0000\n"
-"X-Generator: Launchpad (build 16916)\n"
+"X-Launchpad-Export-Date: 2014-02-22 07:33+0000\n"
+"X-Generator: Launchpad (build 16926)\n"
 
 #. module: stock
 #: field:stock.inventory.line.split,line_exist_ids:0
@@ -206,7 +206,7 @@ msgstr "実地棚卸"
 #. module: stock
 #: selection:stock.location.product,type:0
 msgid "Analyse a Period"
-msgstr ""
+msgstr "期間を分析"
 
 #. module: stock
 #: view:report.stock.move:0
@@ -825,7 +825,7 @@ msgstr "梱包"
 #. module: stock
 #: selection:stock.location.product,type:0
 msgid "Analyse Current Inventory"
-msgstr ""
+msgstr "現在の在庫を分析"
 
 #. module: stock
 #: view:stock.move:0
@@ -1926,7 +1926,7 @@ msgstr "利用可能のキャンセル"
 #: code:addons/stock/wizard/stock_location_product.py:49
 #, python-format
 msgid "Current Inventory"
-msgstr ""
+msgstr "現在の在庫"
 
 #. module: stock
 #: help:product.template,property_stock_production:0
@@ -2389,7 +2389,7 @@ msgstr "仕入先ロケーション"
 #. module: stock
 #: view:stock.location.product:0
 msgid "View Products Inventory"
-msgstr ""
+msgstr "製品在庫を表示"
 
 #. module: stock
 #: view:stock.move:0
@@ -2718,7 +2718,7 @@ msgstr ""
 #. module: stock
 #: model:stock.location,name:stock.stock_location_4
 msgid "Big Suppliers"
-msgstr ""
+msgstr "大手の仕入先"
 
 #. module: stock
 #: model:ir.actions.act_window,help:stock.action_stock_inventory_report
@@ -3640,7 +3640,7 @@ msgstr "関係するアカウントの有効化"
 #. module: stock
 #: field:stock.location.product,type:0
 msgid "Analyse Type"
-msgstr ""
+msgstr "分析タイプ"
 
 #. module: stock
 #: model:ir.actions.act_window,help:stock.action_picking_tree4
