--- a/account/i18n/mn.po
+++ b/account/i18n/mn.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2014-03-05 05:23+0000\n"
+"PO-Revision-Date: 2014-03-05 06:18+0000\n"
 "Last-Translator: Jacara <Unknown>\n"
 "Language-Team: Mongolian <mn@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-03-05 05:56+0000\n"
+"X-Launchpad-Export-Date: 2014-03-06 06:14+0000\n"
 "X-Generator: Launchpad (build 16948)\n"
 
 #. module: account
@@ -3562,7 +3562,7 @@ msgstr "Нэхэмжлэлийн валют"
 #: field:accounting.report,account_report_id:0
 #: model:ir.ui.menu,name:account.menu_account_financial_reports_tree
 msgid "Account Reports"
-msgstr "Тайлагнах Дансд"
+msgstr "Санхүүгийн тайлан"
 
 #. module: account
 #: field:account.payment.term,line_ids:0
