--- a/account/i18n/fr_CA.po
+++ b/account/i18n/fr_CA.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2014-03-18 21:01+0000\n"
+"PO-Revision-Date: 2014-03-19 14:03+0000\n"
 "Last-Translator: Philippe Latouche - Savoir-faire Linux <Unknown>\n"
 "Language-Team: French (Canada) <fr_CA@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-03-19 06:29+0000\n"
-"X-Generator: Launchpad (build 16963)\n"
+"X-Launchpad-Export-Date: 2014-03-20 06:19+0000\n"
+"X-Generator: Launchpad (build 16967)\n"
 
 #. module: account
 #: model:process.transition,name:account.process_transition_supplierreconcilepaid0
@@ -1269,7 +1269,7 @@ msgstr "Caisses enregistreuses"
 #. module: account
 #: field:account.config.settings,sale_refund_journal_id:0
 msgid "Sale refund journal"
-msgstr "Journal des notes de crédit de vente"
+msgstr "Journal auxilaire - Compte clients"
 
 #. module: account
 #: model:ir.actions.act_window,help:account.action_view_bank_statement_tree
@@ -1581,7 +1581,7 @@ msgstr "Relevé bancaire"
 #. module: account
 #: field:res.partner,property_account_receivable:0
 msgid "Account Receivable"
-msgstr ""
+msgstr "Compte client"
 
 #. module: account
 #: code:addons/account/account.py:612
@@ -1599,7 +1599,7 @@ msgstr ""
 #: selection:account.partner.balance,display_partner:0
 #: selection:account.report.general.ledger,display_account:0
 msgid "With balance is not equal to 0"
-msgstr ""
+msgstr "Compte dont le solde n'est pas 0"
 
 #. module: account
 #: code:addons/account/account.py:1483
@@ -1632,7 +1632,7 @@ msgstr ""
 #. module: account
 #: field:account.automatic.reconcile,max_amount:0
 msgid "Maximum write-off amount"
-msgstr ""
+msgstr "Montant maximum des écarts de réconcilliation"
 
 #. module: account
 #. openerp-web
@@ -1642,6 +1642,9 @@ msgid ""
 "There is nothing to reconcile. All invoices and payments\n"
 "                    have been reconciled, your partner balance is clean."
 msgstr ""
+"Il n'y a rien à réconcillier. Toutes les factures et paiements\n"
+"                       ont été réconcilliés, le solde de votre partenaire "
+"est équilibré."
 
 #. module: account
 #: field:account.chart.template,code_digits:0
