--- a/hr/i18n/am.po
+++ b/hr/i18n/am.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-03-18 13:39+0000\n"
+"PO-Revision-Date: 2014-03-19 08:27+0000\n"
 "Last-Translator: biniyam <life2enough@gmail.com>\n"
 "Language-Team: Amharic <am@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-03-19 06:29+0000\n"
-"X-Generator: Launchpad (build 16963)\n"
+"X-Launchpad-Export-Date: 2014-03-20 06:19+0000\n"
+"X-Generator: Launchpad (build 16967)\n"
 
 #. module: hr
 #: model:process.node,name:hr.process_node_openerpuser0
@@ -69,7 +69,7 @@ msgstr ""
 #: view:hr.employee:0
 #: view:hr.job:0
 msgid "Group By..."
-msgstr ""
+msgstr "በቡድን"
 
 #. module: hr
 #: model:ir.actions.act_window,name:hr.view_department_form_installer
@@ -94,12 +94,12 @@ msgstr ""
 #: field:hr.job,department_id:0
 #: model:ir.model,name:hr.model_hr_department
 msgid "Department"
-msgstr ""
+msgstr "የስራ ክፍል"
 
 #. module: hr
 #: field:hr.employee,work_email:0
 msgid "Work Email"
-msgstr ""
+msgstr "የስራ ኢሜይል"
 
 #. module: hr
 #: help:hr.employee,image:0
@@ -116,17 +116,17 @@ msgstr ""
 #. module: hr
 #: view:hr.job:0
 msgid "Jobs"
-msgstr ""
+msgstr "ስራ"
 
 #. module: hr
 #: view:hr.job:0
 msgid "In Recruitment"
-msgstr ""
+msgstr "ቅጥር"
 
 #. module: hr
 #: field:hr.job,message_unread:0
 msgid "Unread Messages"
-msgstr ""
+msgstr "ያልተነበቡ መልእክቶች"
 
 #. module: hr
 #: field:hr.department,company_id:0
@@ -134,7 +134,7 @@ msgstr ""
 #: view:hr.job:0
 #: field:hr.job,company_id:0
 msgid "Company"
-msgstr ""
+msgstr "ድርጅት"
 
 #. module: hr
 #: field:hr.job,no_of_recruitment:0
