--- a/hr/i18n/sv.po
+++ b/hr/i18n/sv.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2012-12-21 23:00+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2014-03-19 07:39+0000\n"
+"Last-Translator: Anders Wallenquist <anders.wallenquist@vertel.se>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-21 06:10+0000\n"
-"X-Generator: Launchpad (build 16831)\n"
+"X-Launchpad-Export-Date: 2014-03-20 06:19+0000\n"
+"X-Generator: Launchpad (build 16967)\n"
 
 #. module: hr
 #: model:process.node,name:hr.process_node_openerpuser0
@@ -25,7 +25,7 @@ msgstr "OpenERP användare"
 #. module: hr
 #: field:hr.config.settings,module_hr_timesheet_sheet:0
 msgid "Allow timesheets validation by managers"
-msgstr ""
+msgstr "Tillåter att tidrapporter granskas av närmaste chef"
 
 #. module: hr
 #: field:hr.job,requirements:0
@@ -63,7 +63,7 @@ msgstr ""
 #. module: hr
 #: view:hr.config.settings:0
 msgid "Time Tracking"
-msgstr ""
+msgstr "Tidrapporter"
 
 #. module: hr
 #: view:hr.employee:0
@@ -79,12 +79,12 @@ msgstr "Skapa din avdelning"
 #. module: hr
 #: help:hr.job,no_of_employee:0
 msgid "Number of employees currently occupying this job position."
-msgstr ""
+msgstr "Antal anställda som förnärvarande innehar denna befattning."
 
 #. module: hr
 #: field:hr.config.settings,module_hr_evaluation:0
 msgid "Organize employees periodic evaluation"
-msgstr ""
+msgstr "Anordna strukturerad utvärdering av personalen"
 
 #. module: hr
 #: view:hr.department:0
@@ -107,11 +107,12 @@ msgid ""
 "This field holds the image used as photo for the employee, limited to "
 "1024x1024px."
 msgstr ""
+"Detta fält innehåller ett foto av den anställde, begränsat till 1024x1024px."
 
 #. module: hr
 #: help:hr.config.settings,module_hr_holidays:0
 msgid "This installs the module hr_holidays."
-msgstr ""
+msgstr "Detta installerar modulen hr_holidays"
 
 #. module: hr
 #: view:hr.job:0
@@ -126,7 +127,7 @@ msgstr "I anställningsprocessen"
 #. module: hr
 #: field:hr.job,message_unread:0
 msgid "Unread Messages"
-msgstr ""
+msgstr "Olästa meddelanden"
 
 #. module: hr
 #: field:hr.department,company_id:0
@@ -144,12 +145,12 @@ msgstr "Rekryteringsbehov"
 #. module: hr
 #: view:hr.employee:0
 msgid "Other Information ..."
-msgstr ""
+msgstr "Övrig information ..."
 
 #. module: hr
 #: constraint:hr.employee.category:0
 msgid "Error! You cannot create recursive Categories."
-msgstr ""
+msgstr "Fel! Du kan inte skapa rekursiva kategorier."
 
 #. module: hr
 #: help:hr.config.settings,module_hr_recruitment:0
@@ -159,7 +160,7 @@ msgstr ""
 #. module: hr
 #: view:hr.employee:0
 msgid "Birth"
-msgstr ""
+msgstr "Född"
 
 #. module: hr
 #: model:ir.actions.act_window,name:hr.open_view_categ_form
@@ -195,12 +196,12 @@ msgstr "Gift"
 #. module: hr
 #: field:hr.job,message_ids:0
 msgid "Messages"
-msgstr ""
+msgstr "Meddelanden"
 
 #. module: hr
 #: view:hr.config.settings:0
 msgid "Talent Management"
-msgstr ""
+msgstr "Begåvningsutveckling"
 
 #. module: hr
 #: help:hr.config.settings,module_hr_timesheet_sheet:0
@@ -210,17 +211,17 @@ msgstr ""
 #. module: hr
 #: view:hr.employee:0
 msgid "Mobile:"
-msgstr ""
+msgstr "Mobil:"
 
 #. module: hr
 #: view:hr.employee:0
 msgid "Position"
-msgstr ""
+msgstr "Tjänst"
 
 #. module: hr
 #: help:hr.job,message_unread:0
 msgid "If checked new messages require your attention."
-msgstr ""
+msgstr "Om ikryssad nya meddelanden som kräver din uppmärksamhet"
 
 #. module: hr
 #: field:hr.employee,color:0
@@ -280,7 +281,7 @@ msgstr "Kontorsplats"
 #. module: hr
 #: field:hr.job,message_follower_ids:0
 msgid "Followers"
-msgstr ""
+msgstr "Följare"
 
 #. module: hr
 #: view:hr.employee:0
@@ -346,7 +347,7 @@ msgstr "Jobb"
 #. module: hr
 #: field:hr.job,no_of_employee:0
 msgid "Current Number of Employees"
-msgstr ""
+msgstr "Aktuellt antal anställda"
 
 #. module: hr
 #: field:hr.department,member_ids:0
@@ -366,12 +367,12 @@ msgstr "Anställdsformulär och struktur"
 #. module: hr
 #: field:hr.config.settings,module_hr_expense:0
 msgid "Manage employees expenses"
-msgstr ""
+msgstr "Utläggshantering"
 
 #. module: hr
 #: view:hr.employee:0
 msgid "Tel:"
-msgstr ""
+msgstr "Tel:"
 
 #. module: hr
 #: selection:hr.employee,marital:0
@@ -766,7 +767,7 @@ msgstr "HemAdress"
 #. module: hr
 #: field:hr.config.settings,module_hr_timesheet:0
 msgid "Manage timesheets"
-msgstr ""
+msgstr "Administrera tidrapporter"
 
 #. module: hr
 #: model:ir.actions.act_window,name:hr.open_payroll_modules
