--- a/point_of_sale/i18n/ja.po
+++ b/point_of_sale/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-03-22 04:59+0000\n"
+"PO-Revision-Date: 2014-03-28 09:21+0000\n"
 "Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-03-23 06:44+0000\n"
+"X-Launchpad-Export-Date: 2014-03-29 07:30+0000\n"
 "X-Generator: Launchpad (build 16967)\n"
 
 #. module: point_of_sale
@@ -3493,7 +3493,7 @@ msgstr ""
 #. module: point_of_sale
 #: field:pos.order,pos_reference:0
 msgid "Receipt Ref"
-msgstr ""
+msgstr "レシート参照"
 
 #. module: point_of_sale
 #: model:ir.model,name:point_of_sale.model_pos_details
@@ -3569,6 +3569,14 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                クリックして新しい注文を作成します。\n"
+"              </p><p>\n"
+"                "
+"進行中の注文は、このメニューで閲覧できます。新しい注文の記録には、タッチスクリーン・インターフェース向けの<i>自分のセッション</i>メニューを使用すべ"
+"きです。\n"
+"              </p>\n"
+"            "
 
 #. module: point_of_sale
 #. openerp-web
