--- a/mail/i18n/sv.po
+++ b/mail/i18n/sv.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2014-03-18 12:47+0000\n"
+"PO-Revision-Date: 2014-03-29 14:52+0000\n"
 "Last-Translator: Anders Wallenquist <anders.wallenquist@vertel.se>\n"
 "Language-Team: Svenska <info@openerpsweden.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-03-19 06:29+0000\n"
-"X-Generator: Launchpad (build 16963)\n"
+"X-Launchpad-Export-Date: 2014-03-30 06:15+0000\n"
+"X-Generator: Launchpad (build 16967)\n"
 
 #. module: mail
 #: view:mail.followers:0
@@ -133,6 +133,8 @@ msgid ""
 "Email address of the sender. This field is set when no matching partner is "
 "found for incoming emails."
 msgstr ""
+"E-postadress till avsändaren. Det här fältet är satt när inget matchande "
+"företag hittas för inkommande e-post."
 
 #. module: mail
 #: model:ir.model,name:mail.model_mail_compose_message
@@ -196,6 +198,9 @@ msgid ""
 "Members of those groups will automatically added as followers. Note that "
 "they will be able to manage their subscription manually if necessary."
 msgstr ""
+"Medlemmarna i dessa grupper kommer automatiskt att läggas till som följare. "
+"Observera att de kommer att kunna hantera sin prenumeration för hand om det "
+"behövs."
 
 #. module: mail
 #. openerp-web
@@ -224,6 +229,9 @@ msgid ""
 " %s won't be notified of any email or discussion on this document. Do you "
 "really want to remove him from the followers ?"
 msgstr ""
+"Varning!\n"
+"  %s inte kommer att meddelas om någon e-post eller diskussion om detta "
+"dokument. Vill du verkligen ta bort honom från följare?"
 
 #. module: mail
 #: field:mail.compose.message,res_id:0
@@ -246,6 +254,9 @@ msgid ""
 "image, with aspect ratio preserved. Use this field in form views or some "
 "kanban views."
 msgstr ""
+"Medelstora foto av gruppen. Det är automatiskt storleksändras som en "
+"128x128px bild, med bildförhållande bevaras. Använd det här fältet i "
+"formulär vyer eller några Kanbanvyer."
 
 #. module: mail
 #. openerp-web
@@ -292,14 +303,14 @@ msgstr "Tråd"
 #: code:addons/mail/static/src/xml/mail.xml:29
 #, python-format
 msgid "Open the full mail composer"
-msgstr ""
+msgstr "Öppna den avancerade e-posteditorn"
 
 #. module: mail
 #. openerp-web
 #: code:addons/mail/static/src/xml/mail.xml:29
 #, python-format
 msgid "&ograve"
-msgstr ""
+msgstr "&ograve"
 
 #. module: mail
 #: field:base.config.settings,alias_domain:0
@@ -1098,7 +1109,7 @@ msgstr ""
 #. module: mail
 #: model:ir.ui.menu,name:mail.mail_group_root
 msgid "My Groups"
-msgstr ""
+msgstr "Mina grupper"
 
 #. module: mail
 #: model:ir.actions.client,help:mail.action_mail_archives_feeds
